# dip20call

./: Cargo.toml  README.md  dfx.json  did.sh  package.json
src/answer/: Cargo.toml  answer.did
src/answer/src/: lib.rs
src/caller/: Cargo.toml
src/caller/src/: lib.rs
src/declarations/answer/: answer.did.d.ts  answer.did.js  index.d.ts  index.js
src/declarations/caller/: index.d.ts  index.js
