[package]
name = "answer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
ic-cdk-timers = "0.6.0" # Feelfree to remove this dependency if you don't need timers
ic-cdk-macros = "0.8.1"
